each pipe can have multiple endpoints

--- a/cmd/device-hub/config.json
+++ b/cmd/device-hub/config.json
@@ -40,13 +40,13 @@
       "uri": "/a",
       "profile": "xxx",
       "listener": "http-one",
-      "endpoint": "stdout-one"
+      "endpoints": ["stdout-one"]
     },
     {
       "uri": "/b",
       "profile": "xxx",
       "listener": "mqtt-one",
-      "endpoint": "stdout-one"
+      "endpoints": ["stdout-one", "stdout-one"]
     }
   ]
 }
