pretty print to stdout

--- a/cmd/device-hub/config.json
+++ b/cmd/device-hub/config.json
@@ -18,7 +18,10 @@
   "endpoints": [
     {
       "type": "stdout",
-      "uid": "stdout-one"
+      "uid": "stdout-one",
+      "configuration": {
+          "prettyprint": true
+      }
     },
     {
         "type" : "multichain",
