--- a/test-configurations/http_listener.yaml
+++ b/test-configurations/http_listener.yaml
@@ -3,4 +3,4 @@ type: listener
 kind: http
 configuration:
   # Address to recieve messages from 
-  HTTPAddress: 0.0.0.0:8085
+  HTTPBindingAddress: 0.0.0.0:8085
