add 'decode' profile script

--- a/test-configurations/profile_script.yaml
+++ b/test-configurations/profile_script.yaml
@@ -3,24 +3,24 @@ type: profile
 kind: script
 configuration:
   # Profile name - a unique name for the profile
-  # Consider namespacing to either an organisation or project
-  profile-name : thingful/profile-device-1
-  # Profile description 
+  # Consider using a unique namespace of either an organisation or project
+  profile-name : thingful/device-1
+  # Profile description
   profile-description : blah blah blah
   # Semanatic version for the profile
   profile-version: 1.0.0-beta
   # Name of the function to call
   script-main: xxx
-  # Runtime to use - valid values 'javascript'
+  # Runtime to use - valid value 'javascript'
   script-runtime: javascript
   # Format of the message received.
-  # One of json, csv, xml, raw
-  script-input: json 
-  # Function to run - written in Javacript
+  # One of 'json', 'csv', 'xml', 'raw'
+  script-input: json
+  # Function to run - written in Javascript
   # Can log via console.log
   # Must return an object
   script-contents: >
-      function xxx ( input ) 
+      function xxx ( input )
       {
         return input
       }
