reimplement store components

--- a/test-configurations/http_listener.yaml
+++ b/test-configurations/http_listener.yaml
@@ -2,5 +2,5 @@
 type: listener
 kind: http
 configuration:
-  # Address to recieve messages from 
+  # Address to receive messages from 
   HTTPBindingAddress: 0.0.0.0:8085
