make cnfiguration files consistent

--- a/test-configurations/http_listener.yaml
+++ b/test-configurations/http_listener.yaml
@@ -3,4 +3,4 @@ type: listener
 kind: http
 configuration:
   # Address to receive messages from 
-  HTTPBindingAddress: 0.0.0.0:8085
+  http-binding-address: 0.0.0.0:8085
