--- a/test-configurations/std_out_endpoint.yaml
+++ b/test-configurations/std_out_endpoint.yaml
@@ -3,4 +3,4 @@ type: endpoint
 kind: stdout
 configuration:
   # Format the output with tabs and line breaks
-  prettyPrint: true
+  pretty-print: true
