debug wercker env as not starting services

--- a/wercker.yml
+++ b/wercker.yml
@@ -10,6 +10,10 @@ build:
     steps:
         - setup-go-workspace
         - script:
+            name: env
+            code: |
+                env && docker ps
+        - script:
             name: run tests
             code: |
               make test_integration
