add a grove-pi listener and profile for tempreature and humidity reading

--- a/test-configurations/grovepi-dht_listener.yaml
+++ b/test-configurations/grovepi-dht_listener.yaml
@@ -3,5 +3,5 @@ uid: grovepi-dht-listener
 type: listener
 kind: grovepi-dht
 configuration:
-    grovepi-sample-rate: 0.2
-    grovepi-pin: D7
+    sample-rate-ms: 10000
+    pin: D7
