--- a/glide.yaml
+++ b/glide.yaml
@@ -3,6 +3,8 @@ import:
 - package: github.com/robertkrimen/otto
 - package: google.golang.org/grpc
   version: ^1.2.1
+- package: github.com/rs/xid
+  version: ^1.1.0
 testImport:
 - package: github.com/stretchr/testify
   version: ^1.1.4
