--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - docker
 
 before_script:
-  - go install github.com/pmezard/licenses
+  - go get github.com/pmezard/licenses
 
 script:
   - make check-license
