--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 install:
   - curl -OL https://github.com/google/protobuf/releases/download/v3.4.0/protoc-3.4.0-linux-x86_64.zip
   - unzip protoc-3.4.0-linux-x86_64.zip -d protoc3
-  - mv protoc3/bin/* /usr/local/bin/
+  - sudo mv protoc3/bin/* /usr/local/bin/
 
 notifications:
     slack: thingful:1X9OpFzHUf1i7Y9lPyHoNGld
